--- a/theme/css/style-desktop.css
+++ b/theme/css/style-desktop.css
@@ -109,6 +109,24 @@
             }
 
     /* List */
+        ul.links
+        {
+        }
+
+            ul.links li
+            {
+                display: inline-block;
+                border-left: solid 1px rgba(255,255,255,0.05);
+                padding: 0 0 0 1em;
+                margin: 0 0 0 1em;
+            }
+
+            ul.links li:first-child
+            {
+                border-left: 0;
+                padding-left: 0;
+                margin-left: 0;
+            }
 
         ul.social
         {
