--- a/theme/css/style-mobile.css
+++ b/theme/css/style-mobile.css
@@ -69,6 +69,24 @@
                 }
 
     /* List */
+        ul.links
+        {
+        }
+
+            ul.links li
+            {
+                display: block;
+                border-top: solid 1px rgba(255,255,255,0.05);
+                padding: 0.25em 0 0 0;
+                margin: 0.25em 0 0 0;
+            }
+
+            ul.links li:first-child
+            {
+                border-top: 0;
+                padding-top: 0;
+                margin-top: 0;
+            }
 
         ul.social
         {
