--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -118,6 +118,10 @@
         font-style: italic;
         font-size: 0.75em;
     }
+    .hint {
+        font-size: 0.8em;
+        margin: 0;
+    }
 
     form
     {
